--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 
+    packagingOptions{
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+
 }
 
 dependencies {
@@ -35,7 +41,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     //ui
     compile 'konifar:fab-transformation:1.0.0'
-    compile ('com.alibaba.android:vlayout:1.0.1@aar') {
+    compile('com.alibaba.android:vlayout:1.0.1@aar') {
         transitive = true
     }
     compile 'com.ms-square:expandableTextView:0.1.4'
@@ -86,7 +92,9 @@ dependencies {
     releaseCompile 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
     //ArcGis
-    compile 'com.esri.arcgisruntime:arcgis-android:100.0.0'
+    compile 'com.esri.arcgis.android:arcgis-android:10.2.6-2'
 
+    //Camera
+    compile 'com.github.florent37:camerafragment:1.0.1'
     testCompile 'junit:junit:4.12'
 }
