--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
         jcenter()
         // Add the Esri public Bintray Maven repository
         maven {
-            url 'https://esri.bintray.com/arcgis'
+            url'http://dl.bintray.com/esri/arcgis'
         }
     }
 }
