--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -47,7 +47,6 @@ dependencies {
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile 'com.jaeger.statusbaruitl:library:1.3.5'
-
     //network
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
@@ -80,21 +79,21 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     //fragment manager
     compile 'me.yokeyword:fragmentation:0.10.1'
-
     //canary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-
     //blockcanary
     compile 'com.github.markzhai:blockcanary-android:1.5.0'
     debugCompile 'com.github.markzhai:blockcanary-android:1.5.0'
     releaseCompile 'com.github.markzhai:blockcanary-no-op:1.5.0'
-
     //ArcGis
     compile 'com.esri.arcgis.android:arcgis-android:10.2.6-2'
-
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    // Base RecycleView Adapter Helper
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.13'
     //Camera
     compile 'com.github.florent37:camerafragment:1.0.1'
     testCompile 'junit:junit:4.12'
+
 }
