--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/LGPL2.1'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
@@ -92,6 +92,8 @@ dependencies {
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     // Base RecycleView Adapter Helper
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.13'
+    // banner
+    compile 'com.youth.banner:banner:1.4.9'  //最新版本
     //Camera
     compile 'com.github.florent37:camerafragment:1.0.1'
     testCompile 'junit:junit:4.12'
