--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,11 @@ android {
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.lyqdhgo.environment"
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -44,6 +45,10 @@ dependencies {
     compile('com.alibaba.android:vlayout:1.0.1@aar') {
         transitive = true
     }
+
+    //method more than 65536
+    compile 'com.android.support:multidex:1.0.0'
+
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile 'com.jaeger.statusbaruitl:library:1.3.5'
@@ -84,9 +89,9 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     //blockcanary
-    compile 'com.github.markzhai:blockcanary-android:1.5.0'
-    debugCompile 'com.github.markzhai:blockcanary-android:1.5.0'
-    releaseCompile 'com.github.markzhai:blockcanary-no-op:1.5.0'
+//    compile 'com.github.markzhai:blockcanary-android:1.5.0'
+//    debugCompile 'com.github.markzhai:blockcanary-android:1.5.0'
+//    releaseCompile 'com.github.markzhai:blockcanary-no-op:1.5.0'
     //ArcGis
     compile 'com.esri.arcgis.android:arcgis-android:10.2.6-2'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
