--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,10 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.9'  //最新版本
     // chart
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    // 高德地图
+    compile 'com.amap.api:search:latest.integration'
+    compile 'com.amap.api:map2d:latest.integration'
+    compile 'com.amap.api:location:latest.integration'
     //Camera
     compile 'com.github.florent37:camerafragment:1.0.1'
     testCompile 'junit:junit:4.12'
