--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,8 @@ dependencies {
     compile 'com.amap.api:location:latest.integration'
     //Camera
     compile 'com.github.florent37:camerafragment:1.0.1'
+    // Stetho调试
+    compile 'com.facebook.stetho:stetho:1.5.0'
     testCompile 'junit:junit:4.12'
 
 }
