--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,8 +106,9 @@ dependencies {
     compile 'com.amap.api:search:latest.integration'
     compile 'com.amap.api:map2d:latest.integration'
     compile 'com.amap.api:location:latest.integration'
-    //Camera
-    compile 'com.github.florent37:camerafragment:1.0.1'
+    // pic select
+    compile 'com.zhihu.android:matisse:0.4.3'
+//    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
     // Stetho调试
     compile 'com.facebook.stetho:stetho:1.5.0'
     testCompile 'junit:junit:4.12'
