--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,21 +46,59 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
     //ui
-    compile 'konifar:fab-transformation:1.0.0'
     compile('com.alibaba.android:vlayout:1.0.1@aar') {
         transitive = true
     }
-
     //method more than 65536
-    compile 'com.android.support:multidex:1.0.0'
+    //network
+    //dagger2
+    //butterknife
+    //rx
+    //eventbus
+    //logger
+    //autolayout
+    //fragment manager
+    //canary
+    //blockcanary
 
+    //    compile 'com.github.markzhai:blockcanary-android:1.5.0'
+
+    //    debugCompile 'com.github.markzhai:blockcanary-android:1.5.0'
+
+    //    releaseCompile 'com.github.markzhai:blockcanary-no-op:1.5.0'
+
+    //ArcGis
+    // Base RecycleView Adapter Helper
+    // banner
+    //最新版本
+
+    // chart
+    // 高德地图
+    //    compile 'com.amap.api:map2d:latest.integration'
+    // pic select
+    //    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
+
+    // Stetho调试
+    // GreenDAO
+    // add library
+    // androidanimations
+    // RxJava+Retrofit
+    // 百分比
+    // Banner
+
+    //    compile 'com.github.pinguo-zhouwei:MZBannerView:v1.1.0'
+    compile project(':mzbanner')
+    //    compile project(path: ':library')
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+
+    compile 'konifar:fab-transformation:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile 'com.jaeger.statusbaruitl:library:1.3.5'
-    //network
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
@@ -69,76 +107,42 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
-    //dagger2
-    apt 'com.google.dagger:dagger-compiler:2.4'
     compile 'com.google.dagger:dagger:2.4'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    //butterknife
     compile 'com.jakewharton:butterknife:8.2.1'
-    apt "com.jakewharton:butterknife-compiler:8.2.1"
-    //rx
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
     compile 'com.trello:rxlifecycle:1.0'
     compile 'com.trello:rxlifecycle-android:1.0'
     compile 'com.trello:rxlifecycle-components:1.0'
-    //eventbus
     compile 'org.greenrobot:eventbus:3.0.0'
-    //logger
     compile 'com.orhanobut:logger:1.15'
-    //autolayout
     compile 'com.zhy:autolayout:1.4.5'
-    compile 'com.android.support:multidex:1.0.1'
-    //fragment manager
     compile 'me.yokeyword:fragmentation:0.10.1'
-    //canary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    //blockcanary
-//    compile 'com.github.markzhai:blockcanary-android:1.5.0'
-//    debugCompile 'com.github.markzhai:blockcanary-android:1.5.0'
-//    releaseCompile 'com.github.markzhai:blockcanary-no-op:1.5.0'
-    //ArcGis
     compile 'com.esri.arcgis.android:arcgis-android:10.2.6-2'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
-    // Base RecycleView Adapter Helper
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.13'
-    // banner
-    compile 'com.youth.banner:banner:1.4.9'  //最新版本
-    // chart
+    compile 'com.youth.banner:banner:1.4.9'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
-    // 高德地图
     compile 'com.amap.api:search:latest.integration'
-//    compile 'com.amap.api:map2d:latest.integration'
-
     compile 'com.amap.api:3dmap:latest.integration'
     compile 'com.amap.api:location:latest.integration'
-    // pic select
     compile 'com.zhihu.android:matisse:0.4.3'
-//    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
-    // Stetho调试
     compile 'com.facebook.stetho:stetho:1.5.0'
-    // GreenDAO
-    compile 'org.greenrobot:greendao:3.2.2' // add library
+    compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.github.clans:fab:1.6.4'
-    // androidanimations
     compile 'com.android.support:support-compat:25.1.1'
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
-    // RxJava+Retrofit
     compile 'com.zhouyou:rxeasyhttp:1.0.4'
-    // 百分比
     compile 'com.zhy:percent-support-extends:1.1.1'
-
     compile 'com.makeramen:roundedimageview:2.3.0'
-
-    // Banner
-//    compile 'com.github.pinguo-zhouwei:MZBannerView:v1.1.0'
-    compile project(':mzbanner')
-//    compile project(':library')
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'junit:junit:4.12'
-
-    compile project(path: ':library')
+    apt 'com.google.dagger:dagger-compiler:2.4'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
